...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".controller.main.drafts.PatientTextDraftDetailPage"
    android:id="@+id/PatientTextDraftDetailPage">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="80dp"
...

    </androidx.constraintlayout.widget.ConstraintLayout>



    <EditText
        android:id="@+id/TitleTextD"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/white_background"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head" />

    <EditText
        android:id="@+id/SubjtextD"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/TitleTextD"
        android:layout_marginStart="32dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="32dp"
...
        android:hint="@string/SubTD"
        android:inputType="textMultiLine"
        android:padding="7dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/SaveChanges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleTextD" />

    <Button
...
