<resources>
    <string name="app_name">Serene</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>


    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="improvement_in">Improvement (in %)</string>
...
        <item>@string/day</item>
        <item>@string/week</item>

    </string-array>

    <string-array name="yes_no">
        <item>@string/yes</item>
        <item>@string/no</item>

    </string-array>

    <string-array name="gender">
        <item>@string/male</item>
        <item>@string/female</item>
...
    <string name="Text">Text Draft/s</string>
    <string name="Voice">Voice Draft/s</string>

    <!-- Voice Draft Dialog -->
    <string name="SpeedPalyAydio">X2</string>
    <string name="DeleteAudio">Delete</string>
    <string name="DeleteMessageAudio">Are you sure you want to delete this Voice Draft ? </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="AudioDeletedSuccess">The Voice Draft Deleted Successfully</string>
    <string name="AudioDeletedFialed">The Voice Draft Did not Deleted, Try Again</string>
    <string name="medicines">Medicines</string>
    <string name="no_scheduled_medicines">No Scheduled Medicines</string>
    <string name="no_scheduled_appointments">No Scheduled Appointments</string>
    <string name="no_scheduled_appointments_or_medicines_for_today">No Scheduled Appointments or Medicines For Today</string>
    <string name="anxiety_analysis">Anxiety Analysis</string>
...
